--- a/static/bower.json
+++ b/static/bower.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "angularjs": "~1.3.14",
     "bootstrap": "~3.3.2",
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "angular-flot": "~0.0.10",
+    "jquery-flot": "~0.8.3"
   }
 }
