--- a/static/bower.json
+++ b/static/bower.json
@@ -15,6 +15,7 @@
     "bootstrap": "~3.3.2",
     "jquery": "~2.1.3",
     "angular-flot": "~0.0.10",
-    "jquery-flot": "~0.8.3"
+    "jquery-flot": "~0.8.3",
+    "hammerjs": "~2.0.4"
   }
 }
