--- a/static/bower.json
+++ b/static/bower.json
@@ -11,11 +11,12 @@
     "tests"
   ],
   "dependencies": {
+    "angular-flot": "~0.0.10",
+    "angular-ui-router": "~0.2.15",
     "angularjs": "~1.3.14",
     "bootstrap": "~3.3.2",
+    "hammerjs": "~2.0.4",
     "jquery": "~2.1.3",
-    "angular-flot": "~0.0.10",
-    "jquery-flot": "~0.8.3",
-    "hammerjs": "~2.0.4"
+    "jquery-flot": "~0.8.3"
   }
 }
