--- a/static/bower.json
+++ b/static/bower.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "angular-flot": "~0.0.10",
     "angular-ui-router": "~0.2.15",
+    "angular-ui-tree": "~2.9.0",
     "angularjs": "~1.3.14",
     "bootstrap": "~3.3.2",
     "hammerjs": "~2.0.4",
