--- a/static/bower.json
+++ b/static/bower.json
@@ -12,6 +12,7 @@
   ],
   "dependencies": {
     "angular-flot": "~0.0.10",
+    "angular-gravatar": "~0.4.1",
     "angular-ui-router": "~0.2.15",
     "angular-ui-tree": "~2.9.0",
     "angularjs": "~1.3.14",
