rename to libCanDrive.so, add make install

--- a/arduino/libraries/CanDrive/Makefile
+++ b/arduino/libraries/CanDrive/Makefile
@@ -1,2 +1,5 @@
-CanDrive.so: CanDrive.cpp CanDrive.h
-	g++ -o CanDrive.so CanDrive.cpp -lwiringPi -shared
+libCanDrive.so: CanDrive.cpp CanDrive.h
+	g++ -o libCanDrive.so CanDrive.cpp -lwiringPi -shared
+
+install: libCanDrive.so
+	libtool --mode=install install -c libCanDrive.so /usr/local/lib/libCanDrive.so
