--- a/rust/wifimon/wifimon.conf
+++ b/rust/wifimon/wifimon.conf
@@ -4,3 +4,6 @@ networks:
     aps:
       - 30:B5:C2:22:D2:36
       - 00:0F:66:A7:19:76
+  Unitymedia WifiSpot:
+    aps:
+      - 11:22:33:44:55:66
