--- a/rust/wifimon/Cargo.toml
+++ b/rust/wifimon/Cargo.toml
@@ -5,4 +5,6 @@ authors = ["Michael Ziegler <michael.ziegler@proemion.com>"]
 
 [dependencies]
 wifiscanner = "0.3.*"
-yaml-rust = "*"
+yaml-rust = "0.3.*"
+iron = "0.5.*"
+router = "0.5.*"
