--- a/rust/rss2imap/Cargo.toml
+++ b/rust/rss2imap/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Michael Ziegler <michael.ziegler@proemion.com>"]
 yaml-rust = "0.3"
 imap = "0.3.3"
 openssl = "*"
+crossbeam = "*"
 
 [dependencies.rss]
 version = "0.7"
