we now can format posts into emails

--- a/rust/rss2imap/Cargo.toml
+++ b/rust/rss2imap/Cargo.toml
@@ -8,6 +8,9 @@ yaml-rust = "0.3"
 imap = "0.3.3"
 openssl = "*"
 crossbeam = "*"
+sha1 = "0.2.0"
+mime_multipart = "*"
+hyper = "*"
 
 [dependencies.rss]
 version = "0.7"
