optimize Dockerfile to use layer cachign

--- a/py/project-template/Dockerfile
+++ b/py/project-template/Dockerfile
@@ -1,11 +1,16 @@
 FROM alpine:latest
 
+# Install basic dependencies
 RUN apk add --no-cache python3 uwsgi-python3
 
+# Install dependencies first without copying the whole application,
+# so that Docker can cache the dependencies
+COPY requirements.txt /app/requirements.txt
+RUN pip3 install --no-cache-dir -r /app/requirements.txt
+
+# Now install the rest of the application
 COPY . /app
 WORKDIR /app
-
-RUN pip3 install --no-cache-dir -r /app/requirements.txt
 
 EXPOSE 5000
 CMD [ "uwsgi", "--ini", "uwsgi.ini" ]
