--- a/ehzpoll/Dockerfile.pre-built
+++ b/ehzpoll/Dockerfile.pre-built
@@ -1,4 +1,4 @@
-FROM arm32v6/alpine
+FROM arm32v6/alpine:3.5
 RUN apk add --no-cache dumb-init python py-flask
 COPY ehzpoll-raspberry /bin/ehzpoll
 COPY ehzserve.py /bin/
