--- a/py/project-template/uwsgi.ini
+++ b/py/project-template/uwsgi.ini
@@ -1,7 +1,8 @@
 [uwsgi]
 chdir=/app
 module=view:application
-http-socket = :5000
+socket = 0.0.0.0:5000
+protocol = http
 plugin=python3
 master=True
 vacuum=True
